[tool.poetry]
name = "leakscraper"
version = "0.1.0"
description = ""
authors = ["Hüseyin Adıgüzel <ahuseyin235@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
sqlalchemy = "^2.0.29"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
schedule = "^1.2.1"
apscheduler = "^3.10.4"
selenium = "^4.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
